procted authentication route and added update view endpoint
